--- a/style.css
+++ b/style.css
@@ -27,21 +27,23 @@ h2{
 	font-size: 1.6rem;
 }
 
-.thingContainer, 
-.links{
+.thingContainer{
 	border-left: 4px solid #266e67;
 	border-right: 4px solid #6a2638;
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-around;
-	margin: 0 auto;
+	margin: 50px auto 100px;
 	width: 75%;
 }
 .thing{
 	flex: 1;
-	width: 30%
+	margin: 50px;
+	width: 300px;
 }
-.link{
-	flex: 1;
+.links{
+	display: flex;
+	justify-content: space-around;
 }
 
 .footer{
